// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Currency currency format with separators 1`] = `
<span
  className="whitespace-nowrap"
>
  $
  42
</span>
`;

exports[`Currency currency format with separators 2`] = `
<span
  className="whitespace-nowrap"
>
  $
  19 000
</span>
`;

exports[`Currency currency format with separators 3`] = `
<span
  className="whitespace-nowrap"
>
  $
  19,000
</span>
`;

exports[`Currency renders default options 1`] = `
<span
  className="whitespace-nowrap"
>
  $42
</span>
`;

exports[`Currency renders default options 2`] = `
<span
  className="whitespace-nowrap"
>
  19 000 $
</span>
`;
